--- a/index.css
+++ b/index.css
@@ -80,21 +80,6 @@ input:focus, textarea:focus, select:focus
    width: 100%;
    height: 100%;
 }
-#wb_Image4
-{
-   vertical-align: top;
-}
-#Image4
-{
-   border: 0px solid #000000;
-   border-radius: 0px;
-   padding: 0;
-   margin: 0;
-   left: 0;
-   top: 0;
-   width: 100%;
-   height: 100%;
-}
 #wb_Text3 
 {
    background-color: transparent;
@@ -122,35 +107,6 @@ input:focus, textarea:focus, select:focus
 #wb_Text5 div
 {
    text-align: center;
-}
-#wb_Image5
-{
-   vertical-align: top;
-}
-#Image5
-{
-   border: 0px solid #000000;
-   border-radius: 0px;
-   padding: 0;
-   margin: 0;
-   left: 0;
-   top: 0;
-   width: 100%;
-   height: 100%;
-}
-#wb_Text7 
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #000000;
-   border-radius: 0px;
-   padding: 0;
-   margin: 0;
-   text-align: left;
-}
-#wb_Text7 div
-{
-   text-align: left;
 }
 #Shape3
 {
@@ -712,7 +668,7 @@ input:focus, textarea:focus, select:focus
    width: 192px;
    height: 5px;
    visibility: hidden;
-   z-index: 16;
+   z-index: 13;
 }
 #wb_Image10
 {
@@ -722,7 +678,7 @@ input:focus, textarea:focus, select:focus
    width: 92px;
    height: 52px;
    visibility: hidden;
-   z-index: 15;
+   z-index: 12;
 }
 #wb_Text1
 {
@@ -731,7 +687,7 @@ input:focus, textarea:focus, select:focus
    top: 719px;
    width: 267px;
    height: 46px;
-   z-index: 10;
+   z-index: 7;
 }
 #wb_Shape5
 {
@@ -754,7 +710,7 @@ input:focus, textarea:focus, select:focus
    top: 11px;
    width: 92px;
    height: 52px;
-   z-index: 19;
+   z-index: 16;
 }
 #Shape3
 {
@@ -769,7 +725,7 @@ input:focus, textarea:focus, select:focus
    width: 956px;
    height: 72px;
    text-align: center;
-   z-index: 5;
+   z-index: 4;
 }
 #Shape4
 {
@@ -793,7 +749,7 @@ input:focus, textarea:focus, select:focus
    width: 635px;
    height: 72px;
    text-align: center;
-   z-index: 6;
+   z-index: 5;
 }
 #wb_Image3
 {
@@ -809,32 +765,15 @@ input:focus, textarea:focus, select:focus
    width: 1920px;
    height: 75px;
 }
-#wb_Image4
+#MergedObject1
 {
+   border-width: 0;
    position: absolute;
    left: 1129px;
    top: 499px;
    width: 707px;
    height: 199px;
-   z-index: 4;
-}
-#wb_Text7
-{
-   position: absolute;
-   left: 1488px;
-   top: 561px;
-   width: 267px;
-   height: 88px;
-   z-index: 8;
-}
-#wb_Image5
-{
-   position: absolute;
-   left: 1317px;
-   top: 554px;
-   width: 155px;
-   height: 88px;
-   z-index: 7;
+   z-index: 17;
 }
 #wb_Image6
 {
@@ -843,7 +782,7 @@ input:focus, textarea:focus, select:focus
    top: 768px;
    width: 430px;
    height: 200px;
-   z-index: 11;
+   z-index: 8;
 }
 #wb_Image7
 {
@@ -852,7 +791,7 @@ input:focus, textarea:focus, select:focus
    top: 768px;
    width: 430px;
    height: 200px;
-   z-index: 12;
+   z-index: 9;
 }
 #wb_PanelMenu1
 {
@@ -863,7 +802,7 @@ input:focus, textarea:focus, select:focus
    height: 70px;
    visibility: hidden;
    text-align: center;
-   z-index: 18;
+   z-index: 15;
 }
 #wb_Image8
 {
@@ -872,7 +811,7 @@ input:focus, textarea:focus, select:focus
    top: 768px;
    width: 430px;
    height: 200px;
-   z-index: 13;
+   z-index: 10;
 }
 #wb_Image9
 {
@@ -881,7 +820,7 @@ input:focus, textarea:focus, select:focus
    top: 768px;
    width: 430px;
    height: 200px;
-   z-index: 14;
+   z-index: 11;
 }
 #wb_MenuBar1
 {
@@ -890,7 +829,7 @@ input:focus, textarea:focus, select:focus
    top: 14px;
    width: 695px;
    height: 46px;
-   z-index: 17;
+   z-index: 14;
 }
 #wb_Shape2
 {
@@ -909,7 +848,7 @@ input:focus, textarea:focus, select:focus
    top: 753px;
    width: 185px;
    height: 6px;
-   z-index: 9;
+   z-index: 6;
 }
 @media only screen and (max-width: 969px)
 {
@@ -956,17 +895,6 @@ body
    margin: 0;
    padding: 0;
 }
-#wb_Image4
-{
-   left: 16px;
-   top: 606px;
-   width: 444px;
-   height: 125px;
-   visibility: visible;
-   display: inline;
-   margin: 0;
-   padding: 0;
-}
 #wb_Text3
 {
    left: 57px;
@@ -991,31 +919,6 @@ body
    display: inline;
 }
 #wb_Text5
-{
-   margin: 0;
-   padding: 0;
-}
-#wb_Image5
-{
-   left: 103px;
-   top: 635px;
-   width: 105px;
-   height: 59px;
-   visibility: visible;
-   display: inline;
-   margin: 0;
-   padding: 0;
-}
-#wb_Text7
-{
-   left: 223px;
-   top: 624px;
-   width: 213px;
-   height: 88px;
-   visibility: visible;
-   display: inline;
-}
-#wb_Text7
 {
    margin: 0;
    padding: 0;
