--- a/shows.css
+++ b/shows.css
@@ -518,6 +518,36 @@ input:focus, textarea:focus, select:focus
    height: auto;
    max-width: 100%;
 }
+#wb_Image2
+{
+   vertical-align: top;
+}
+#Image2
+{
+   border: 0px solid #000000;
+   border-radius: 0px;
+   padding: 0;
+   margin: 0;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+#wb_Image3
+{
+   vertical-align: top;
+}
+#Image3
+{
+   border: 0px solid #000000;
+   border-radius: 0px;
+   padding: 0;
+   margin: 0;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
 #wb_Image10
 {
    position: absolute;
@@ -550,6 +580,24 @@ input:focus, textarea:focus, select:focus
    height: 52px;
    visibility: hidden;
    z-index: 4;
+}
+#wb_Image2
+{
+   position: absolute;
+   left: 51px;
+   top: 127px;
+   width: 977px;
+   height: 510px;
+   z-index: 6;
+}
+#wb_Image3
+{
+   position: absolute;
+   left: 51px;
+   top: 664px;
+   width: 977px;
+   height: 509px;
+   z-index: 7;
 }
 #Shape5
 {
@@ -701,5 +749,27 @@ body
 {
    background-color: #000000;
    overflow-y: auto;
+}
+#wb_Image2
+{
+   left: 15px;
+   top: 94px;
+   width: 452px;
+   height: 236px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+   padding: 0;
+}
+#wb_Image3
+{
+   left: 15px;
+   top: 342px;
+   width: 452px;
+   height: 236px;
+   visibility: visible;
+   display: inline;
+   margin: 0;
+   padding: 0;
 }
 }
