--- a/powerrankings.css
+++ b/powerrankings.css
@@ -1254,6 +1254,34 @@ input:focus, textarea:focus, select:focus
 {
    text-align: center;
 }
+#wb_Text45 
+{
+   background-color: transparent;
+   background-image: none;
+   border: 0px solid #000000;
+   border-radius: 0px;
+   padding: 0;
+   margin: 0;
+   text-align: left;
+}
+#wb_Text45 div
+{
+   text-align: left;
+}
+#wb_Text46 
+{
+   background-color: transparent;
+   background-image: none;
+   border: 0px solid #000000;
+   border-radius: 0px;
+   padding: 0;
+   margin: 0;
+   text-align: left;
+}
+#wb_Text46 div
+{
+   text-align: left;
+}
 #wb_Text19
 {
    position: absolute;
@@ -1346,6 +1374,7 @@ input:focus, textarea:focus, select:focus
    top: 244px;
    width: 109px;
    height: 29px;
+   visibility: hidden;
    z-index: 50;
 }
 #wb_Shape10
@@ -1398,6 +1427,7 @@ input:focus, textarea:focus, select:focus
    top: 244px;
    width: 73px;
    height: 29px;
+   visibility: hidden;
    z-index: 51;
 }
 #wb_Shape11
@@ -1807,6 +1837,15 @@ input:focus, textarea:focus, select:focus
    width: 450px;
    height: 63px;
 }
+#wb_Text45
+{
+   position: absolute;
+   left: 124px;
+   top: 246px;
+   width: 109px;
+   height: 24px;
+   z-index: 74;
+}
 #wb_Text23
 {
    position: absolute;
@@ -1868,6 +1907,15 @@ input:focus, textarea:focus, select:focus
 {
    width: 450px;
    height: 63px;
+}
+#wb_Text46
+{
+   position: absolute;
+   left: 924px;
+   top: 246px;
+   width: 56px;
+   height: 24px;
+   z-index: 75;
 }
 #wb_Text24
 {
@@ -3047,6 +3095,34 @@ body
    display: inline;
 }
 #wb_Text26
+{
+   margin: 0;
+   padding: 0;
+}
+#wb_Text45
+{
+   left: 27px;
+   top: 175px;
+   width: 109px;
+   height: 24px;
+   visibility: hidden;
+   display: none;
+}
+#wb_Text45
+{
+   margin: 0;
+   padding: 0;
+}
+#wb_Text46
+{
+   left: 260px;
+   top: 175px;
+   width: 56px;
+   height: 24px;
+   visibility: hidden;
+   display: none;
+}
+#wb_Text46
 {
    margin: 0;
    padding: 0;
